# single-sign

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  foundry.toml  remappings.txt  rust-toolchain.toml
.github/workflows/: main.yml
.vim/: coc-settings.json
apps/: Cargo.toml
apps/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
contracts/configs/: verifiers.toml
contracts/scripts/: Deploy.s.sol
contracts/src/: SingleSign.sol
contracts/test/: SingleSign.t.sol
examples/: typed_data_concat.json  typed_data_permit2_two.json
guests/: Cargo.toml  build.rs
guests/single-sign/: Cargo.toml
guests/single-sign/src/: main.rs
guests/tests/: single-sign.rs
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
single_sign_types/: Cargo.toml
single_sign_types/src/: lib.rs  signing.rs  typed_data.rs
