[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
single_sign_types = { path = "../single_sign_types" }
alloy-signer = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer-local = { workspace = true, features = ["keystore"] }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }